# arregation_system_tomato

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  file_logger.c  file_logger.h  idf_component.yml  irrigation_logic.c  irrigation_logic.h  log_manager.c  log_manager.h  main.c  motor_control.c  motor_control.h  sensors.c  sensors.h  time_manager.c  time_manager.h  wifi_app.c  wifi_app.h
